<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreLoginActivity">

    <ImageView
        android:id="@+id/iv_logo_rla"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_rla"
        android:src="@drawable/ic_logo_rla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_rla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/robotobold"
        android:text="@string/refactoring_life_nacademy"
        android:textColor="@color/title_rla"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_rla" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_init_login"
        android:layout_width="284dp"
        android:layout_height="43dp"
        app:cardElevation="5dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="150dp"
        app:cardBackgroundColor="@color/btn_pre_login"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_rla">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/robotobold"
            android:text="@string/iniciar_sesi_n"
            android:textColor="@color/white"
            android:textSize="12sp" />
            android:textSize="12sp"
            android:fontFamily="@font/robotobold"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_register"
        android:layout_width="284dp"
        android:layout_height="43dp"
        app:cardElevation="5dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/btn_pre_login"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_init_login">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/robotobold"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/en_caso_de_tener_problemas_comunicarse_con_soporte"
        android:fontFamily="@font/robotobold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>