<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.leftbar.fragments.similares.presenter.SimilarFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_title_seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vendedor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:textSize="@dimen/_16sp"
        android:fontFamily="@font/robotobold"/>
    <TextView
        android:id="@+id/tv_seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_title_seller"
        android:text="@string/testseller"
        android:textSize="16sp"
        android:fontFamily="@font/robotoregular"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginStart="@dimen/_5dp"
        app:layout_constraintTop_toTopOf="parent"/>



    <ImageView
        android:id="@+id/Btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_similar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_rv_home_search_list"
        app:layout_constraintTop_toBottomOf="@+id/guideline_top" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="750dp" />

    <TextView
        android:id="@+id/comunication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/robotoregular"
        android:text="@string/en_caso_de_problemas_comunicate_con"
        android:textSize="@dimen/_14sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/robotoregular"
        android:text="@string/soport"
        android:textSize="@dimen/_14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/comunication"/>


</androidx.constraintlayout.widget.ConstraintLayout>