<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.leftbar.fragments.comment.presenter.CommentsFragment">

    <LinearLayout
        android:id="@+id/ll_left_bar"
        android:layout_width="53dp"
        android:layout_height="0dp"
        android:background="#7353BA"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_images_Fragment"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/robotoregular"
            android:padding="0dp"
            android:rotation="-90"
            android:text="@string/imagenes"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_description_Fragment"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/robotoregular"
            android:padding="0dp"
            android:rotation="-90"
            android:text="@string/descripcion"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_financing_Fragment"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/robotoregular"
            android:padding="0dp"
            android:rotation="-90"
            android:text="@string/financiacion"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_comments_Fragment"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/robotoregular"
            android:padding="0dp"
            android:rotation="-90"
            android:text="@string/comentarios"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>



    <View
        android:id="@+id/iv_circle_indicator"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="35sp"
        android:layout_marginTop="600dp"
        android:background="@drawable/circle_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back_arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comentario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="80dp"
        android:layout_marginTop="74dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="20dp"
        android:background="@color/b7b7b7"
        android:contentDescription="@string/imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_Comments"
        app:layout_constraintTop_toBottomOf="@id/iv_line"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintBottom_toTopOf="@id/iv_line2"
        android:layout_marginBottom="@dimen/_16dp"
        android:layout_width="0dp"
        tools:listitem="@layout/item_rv_fg_comments"
        android:layout_height="0dp"/>

    <ImageView
        android:id="@+id/iv_line2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="140dp"
        android:background="@color/b7b7b7"
        android:contentDescription="@string/imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        />

    <TextView
        android:id="@+id/tv_price"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="80dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:text="dawdawdawdawd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="90dp"
        android:layout_height="@dimen/_30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/_20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:fontFamily="@font/robotobold"
        android:text="@string/comprar"
        android:textSize="12sp"
        android:background="@drawable/custom_rectangle_shape2"/>

</androidx.constraintlayout.widget.ConstraintLayout>